# sonant

./: AGENTS.md  CLAUDE.md  Cargo.toml
docs/: product.md  software-architecture.md  software-detailed-design.md
docs/image/: code.html
docs/image/sonant_api_&_model_settings/: code.html
docs/image/sonant_main_plugin_interface/: code.html
scripts/: build_clap_bundle.sh
src/: lib.rs  main.rs
src/app/: generation_job_manager.rs  generation_service.rs  input_track_model.rs  live_input_ipc.rs  live_midi_capture.rs  load_midi_use_case.rs  midi_input_router.rs  mod.rs
src/domain/: errors.rs  generation_contract.rs  midi_path.rs  mod.rs
src/infra/: mod.rs
src/infra/llm/: anthropic.rs  env.rs  mod.rs  openai_compatible.rs  prompt_builder.rs  provider.rs  provider_registry.rs  response_parsing.rs  schema_validator.rs
src/infra/midi/: loader.rs  mod.rs
src/plugin/: clap_adapter.rs
src/plugin/clap_adapter/: audio_ports_extension.rs  gui_extension.rs  mod.rs  note_ports_extension.rs  state_extension.rs
src/ui/: backend.rs  mod.rs  request.rs  state.rs  theme.rs  utils.rs  window.rs
tests/: fr03a_reference_midi_flow.rs  fr03b_live_input_reference_flow.rs  fr04_generation_engine.rs  fr05_mode_generation_flow.rs
tests/support/: temp_file_fixture.rs
