[package]
name = "sonant"
version = "0.1.0"
edition = "2024"

[lib]
name = "sonant"
crate-type = ["cdylib", "rlib"]

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", package = "clack-plugin" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", package = "clack-extensions", features = ["clack-plugin", "gui", "audio-ports", "state"] }
gpui = "0.2.2"
gpui-component = "0.5.1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
